2011-02-24  Emil A Eklund  <eae@chromium.org>

Reviewed by Simon Fraser.

        Add support for missing properties to getComputedStyle
        https://bugs.webkit.org/show_bug.cgi?id=23668

        Test getComputedStyle for the content, counter and outline-offset
        properties.

        * fast/css/getComputedStyle/computed-style-properties-expected.txt: Added.
        * fast/css/getComputedStyle/computed-style-properties.html: Added.
2011-02-24  Emil A Eklund  <eae@chromium.org>

        Reviewed by Simon Fraser.

        Add support for missing properties to getComputedStyle
        https://bugs.webkit.org/show_bug.cgi?id=23668

        Implement getComputedStyle for the content, counter and outline-offset
        properties.

        Test: fast/css/getComputedStyle/computed-style-properties.html

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::contentToCSSValue):
        (WebCore::counterToCSSValue):
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
        * css/CSSPrimitiveValue.cpp:
        (WebCore::CSSPrimitiveValue::cssText):
        * css/CSSPrimitiveValue.h:

Canonical link: https://commits.webkit.org/69494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79574 268f45cc-cd09-0410-ab3c-d52691b4dbfc